[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "wtbc_daemon"
path = "src/main.rs"

[dependencies]
chrono = "0.4.24"
fern = "0.6.2"
log = "0.4.17"
log-panics = { version = "2.1.0", features = ["with-backtrace"]}
rand = "0.8.5"
serde_json = "1.0.95"
shared = {path = "../shared"}
thiserror = "1.0.40"
