[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "shared"
crate-type = ["rlib"]

[[bin]]
path = "src/main.rs"
name = "shared_tests"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.158", features = ["derive"] }
thiserror = "1.0.40"
